@@ -26,3 +26,5 @@ servlet-api.version=2.5
 spark-scala.version=2.11
 jackson-module-scala.version=2.10.2
 hive-storage-api.version=2.7.0
+protobuf-java.version=2.5.0
+mockito.version=1.8.4
