@@ -14,17 +14,19 @@
 #It drives ivy and the generation of a maven POM
 
 #These are the versions of our Hadoop 3 dependencies (core and other libs separated and in alphabetical order)
-hadoop-common.version=3.2.4
-hadoop-hdfs.version=3.2.4
-hadoop-mapreduce.version=3.2.4
+hadoop-common.version=3.3.6
+hadoop-hdfs.version=3.3.6
+hadoop-mapreduce.version=3.3.6
 
 accumulo.version=1.6.0
 netty.version=3.10.6.Final
 codahale.metrics-core.version=3.0.1
 netty-all.version=4.1.77.Final
 re2j.version=1.0
-tez.version=0.10.2
+tez.version=0.10.3
 servlet-api.version=3.1.0
 spark-scala.version=2.12
-jackson-module-scala.version=2.10.2
+jackson-module-scala.version=2.12.7
 hive-storage-api.version=2.7.2
+protobuf-java.version=3.21.1
+mockito.version=2.28.2
