@@ -70,19 +70,19 @@ spark2-scala.version=2.11
 jackson-module-scala_spark2.version=2.9.10
 spark3.version=3.2.4
 spark3-scala.version=2.12
-jackson-module-scala_spark3.version=2.10.2
+jackson-module-scala_spark3.version=2.12.7
 xerces.version=2.10.0
 xalan.version=2.7.1
 wagon-http.version=1.0-beta-2
 zookeeper.version=3.5.7
 servlet.version=4.0.6
-protobuf-java.version=2.5.0
 metrics-core.version=2.1.2
 guice.version=3.0
 guice-servlet.version=3.0
 aopalliance.version=1.0
 jsr311-api.version=1.1.1
-mockito.version=1.8.4
+hamcrest.version=1.3
+bouncycastle.version=1.78.1
 jansi.version=1.9
 asm.version=3.3.1
 snappy-java.version=1.1.1.3
